# StateMachine

./: CMakeLists.txt  CustomButton.qml  HeaderDelegate.qml  Main.qml  README.md  graph.json  main.cpp
qmlComponents/: ConnectionCreateMode.qml  CustomButton.qml  DefaultMode.qml  EditNodeMode.qml
source/: FileManager.cpp  FileManager.h  GraphData.h  GraphSerializer.cpp  GraphSerializer.h  Node.cpp  Node.h  UserController.cpp  UserController.h
